[package]
name = "mkext2"
version = "0.1.0"
authors = ["Paul Dagnelie <pcd@delphix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "0.8", features = ["v4"] }

[[bin]]
name = "mkext2"
path = "src/mkext2.rs"